unpackaged/main/default/objects/RClientConfigurations__c/RClientConfigurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>R-Client Configurations</label>
</CustomObject>