unpackaged/main/default/objects/RClientConfigurations__c/fields/ComboChallengeNotificationAfter__c.field-meta.xml
<CustomField>
    <fullName>ComboChallengeNotificationAfter__c</fullName>
    <label>Combo Challenge Notification After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>