unpackaged/main/default/objects/RClientConfigurations__c/fields/ComboChallengeNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>ComboChallengeNotifSendHour__c</fullName>
    <label>Combo Challenge Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>