unpackaged/main/default/objects/RClientConfigurations__c/fields/NewElementNotifBatchLastRun__c.field-meta.xml
<CustomField>
    <fullName>NewElementNotifBatchLastRun__c</fullName>
    <label>New Element Notif Batch Last Run</label>
    <type>DateTime</type>
</CustomField>