unpackaged/main/default/objects/RClientConfigurations__c/fields/NewEmailTemplateNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>NewEmailTemplateNotifSendHour__c</fullName>
    <label>New Email Template Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>