unpackaged/main/default/objects/RClientConfigurations__c/fields/NewEventNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>NewEventNotifSendHour__c</fullName>
    <label>New Event Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>