unpackaged/main/default/objects/RClientConfigurations__c/fields/NewGiftNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>NewGiftNotifSendHour__c</fullName>
    <label>New Gift Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>