unpackaged/main/default/objects/RClientConfigurations__c/fields/NewProductNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>NewProductNotifSendHour__c</fullName>
    <label>New Product Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>