unpackaged/main/default/objects/RClientConfigurations__c/fields/ReattributedClientListId__c.field-meta.xml
<CustomField>
    <fullName>ReattributedClientListId__c</fullName>
    <label>Reattributed Client List Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>