unpackaged/main/default/objects/RClientConfigurations__c/fields/ReattributedNotifSendHour__c.field-meta.xml
<CustomField>
    <fullName>ReattributedNotifSendHour__c</fullName>
    <label>Reattributed Notif Send Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>